--- a/modules/naboj/templates/i18n/english.yaml
+++ b/modules/naboj/templates/i18n/english.yaml
@@ -24,27 +24,31 @@ constants:
 instructions:
     title:              "Instructions" 
 envelope:
-    donotopen:          "Do not open this envelope before the competition starts.":
+    donotopen:          "Do not open this envelope before the competition starts."
 
-physconstants:
-    au:                 "Astronomical unit"
+physics_constants:
+    au:                 "astronomical unit"
     avogadro:           "Avogadro constant"
     boltzmann:          "Boltzmann constant"
-    density_air:        "Density of the air at STP"
-    density_helium:     "Density of helium at STP"
-    density_water:      "Density of water at STP"
-    elementary_charge:  "Elementary charge"
-    gforce:             "Standard gravity of the Earth"
-    gravity:            "Gravitational constant"
-    light_speed:        "Speed of light"
-    mass_electron:      "Electron rest mass"
-    mass_proton:        "Proton rest mass"
-    parsec:             "Parsec"
-    permeability:       "Permeability of free space"
-    permittivity:       "Permittivity of free space"
-    pressure_standard:  "Atmospheric pressure"
-    radius_earth:       "Radius of the Earth"
-    radius_sun:         "Radius of the Sun"
-    solar_flux:         "Solar constant"
+    density_air:        "density of the air at STP"
+    density_helium:     "density of helium at STP"
+    density_water:      "density of water at STP"
+    elementary_charge:  "elementary charge"
+    gforce:             "standard acceleration due to gravity"
+    gravity:            "gravitational constant"
+    mass_earth:         "mass of the Earth"
+    mass_electron:      "electron rest mass"
+    mass_proton:        "proton rest mass"
+    mass_sun:           "mass of the Sun"
+    parsec:             "parsec"
+    permeability:       "permeability of free space"
+    permittivity:       "permittivity of free space"
+    planck:             "Planck constant"
+    pressure_standard:  "atmospheric pressure"
+    puerperium:         "puerperium"
+    radius_earth:       "radius of the Earth"
+    radius_sun:         "radius of the Sun"
+    solar_flux:         "solar constant"
+    speed_light:        "speed of light"
     stefan_boltzmann:   "Stefan--Boltzmann constant"
-    universal_gas:      "Universal gas constant"
+    universal_gas:      "universal gas constant"
