--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -26,27 +26,29 @@ instructions:
 envelope:
     donotopen:          "Neotvárajte túto obálku pred začiatkom súťaže."
 
-physconstants:
-    au:                 "Astronomická jednotka (vzdialenosť Zem--Slnko)"
+physics_constants:
+    au:                 "astronomická jednotka (vzdialenosť Zem--Slnko)"
     avogadro:           "Avogadrova konštanta"
     boltzmann:          "Boltzmannova konštanta"
-    density_air:        "Hustota vzduchu"
-    density_helium:     "Hustota hélia"
-    density_water:      "Hustota vody"
-    elementary_charge:  "Elementárny náboj"
-    gforce:             "Tiažové zrýchlenie pri povrchu Zeme"
-    gravity:            "Gravitačná konštanta"
-    mass_earth:         "Hmotnosť Zeme"
-    mass_electron:      "Hmotnosť elektrónu"
-    mass_proton:        "Hmotnosť protónu"
-    mass_sun:           "Hmotnosť Slnka"
-    parsec:             "Parsek"
-    permeability:       "Magnetická permeabilita vákua"
-    permittivity:       "Elektrická permitivita vákua"
-    pressure_standard:  "Štandardný tlak pri hladine mora"
-    radius_earth:       "Polomer Zeme"
-    radius_sun:         "Polomer Slnka"
-    solar_flux:         "Solárna konštanta"
-    speed_light:        "Rýchlosť svetla"
+    density_air:        "hustota vzduchu"
+    density_helium:     "hustota hélia"
+    density_water:      "hustota vody"
+    elementary_charge:  "elementárny náboj"
+    gforce:             "tiažové zrýchlenie pri povrchu Zeme"
+    gravity:            "gravitačná konštanta"
+    mass_earth:         "hmotnosť Zeme"
+    mass_electron:      "hmotnosť elektrónu"
+    mass_proton:        "hmotnosť protónu"
+    mass_sun:           "hmotnosť Slnka"
+    parsec:             "parsek"
+    permeability:       "magnetická permeabilita vákua"
+    permittivity:       "elektrická permitivita vákua"
+    planck:             "Planckova konštanta"
+    pressure_standard:  "štandardný tlak pri hladine mora"
+    puerperium:         "šestonedelie"
+    radius_earth:       "polomer Zeme"
+    radius_sun:         "polomer Slnka"
+    solar_flux:         "solárna konštanta"
+    speed_light:        "rýchlosť svetla"
     stefan_boltzmann:   "Stefan--Boltzmannova konštanta"
-    universal_gas:      "Univerzálna plynová konštanta"
+    universal_gas:      "univerzálna plynová konštanta"
