--- a/modules/naboj/templates/i18n/czech.yaml
+++ b/modules/naboj/templates/i18n/czech.yaml
@@ -1,27 +1,54 @@
 section:
-    problems:           'Zadání'
-    solutions:          'Vzorová řešení'
-    answers:            'Výsledky'
-    constants:          'Tabulka konstant'
-    instructions:       'Pokyny'
-    modulo:             'Modulo'
+    problems:           "Zadání"
+    solutions:          "Vzorová řešení"
+    answers:            "Výsledky"
+    constants:          "Tabulka konstant"
+    instructions:       "Pokyny"
+    modulo:             "Modulo"
 caption:
-    table:              'Tabulka'
-    figure:             'Obrázek'
+    table:              "Tabulka"
+    figure:             "Obrázek"
 competition:
     name:
-        nominative:     'Fyzikální Náboj'
-        genitive:       'Fyzikálního Náboje'
-    email:              'info-cz@physics.naboj.org'
-    website:            'https://physics.naboj.org/'
-team:                   'Tým'
+        nominative:     "Fyzikální Náboj"
+        genitive:       "Fyzikálního Náboje"
+    email:              "info-cz@physics.naboj.org"
+    website:            "https://physics.naboj.org/"
+team:                   "Tým"
 constants:
-    title:              'Tabulka konstant'
-    instruction:        'Během soutěže doporučujeme používat hodnoty konstant z~této tabulky. Výsledek získaný s použitím přesnějších hodnot Vám určitě \textbf{bude} uznán.'
-    constant:           'Konstanta'
-    symbol:             'Značka'
-    value:              'Hodnota'
+    title:              "Tabulka konstant"
+    instruction:        "Během soutěže doporučujeme používat hodnoty konstant z~této tabulky. Výsledek získaný s použitím přesnějších hodnot Vám určitě \textbf{bude} uznán."
+    constant:           "Konstanta"
+    symbol:             "Značka"
+    value:              "Hodnota"
 instructions:
-    title:              'Pokyny' 
+    title:              "Pokyny" 
 envelope:
-    donotopen:          'Do not open this envelope before the competition starts.'
+    donotopen:          "Do not open this envelope before the competition starts."
+
+physics_constants:
+    au:                 "astronomická jednotka (vzdálenost Zem--Slunce)"
+    avogadro:           "Avogadrova konstanta"
+    boltzmann:          "Boltzmannova konstanta"
+    density_air:        "hustota vzduchu"
+    density_helium:     "hustota hélia"
+    density_water:      "hustota vody"
+    elementary_charge:  "elementární náboj"
+    gforce:             "tíhové zrychlení při povrchu Země"
+    gravity:            "gravitační konstanta"
+    mass_earth:         "hmotnost Země"
+    mass_electron:      "hmotnost elektronu"
+    mass_proton:        "hmotnost protonu"
+    mass_sun:           "hmotnost Slunce"
+    parsec:             "parsek"
+    permeability:       "magnetická permeabilita vakua"
+    permittivity:       "elektrická permitivita vakua"
+    planck:             "Planckova konstanta"
+    pressure_standard:  "standardní tlak při hladině moře"
+    puerperium:         "šestinedělí"
+    radius_earth:       "poloměr Země"
+    radius_sun:         "poloměr Slunce"
+    solar_flux:         "solární konstanta"
+    speed_light:        "rychlost světla"
+    stefan_boltzmann:   "Stefan--Boltzmannova konstanta"
+    universal_gas:      "molární plynová konstanta"
