--- a/modules/naboj/templates/i18n/english.yaml
+++ b/modules/naboj/templates/i18n/english.yaml
@@ -17,7 +17,7 @@ competition:
 team:                   "Team"
 constants:
     title:              "Table of constants"
-    instruction:        "We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \textbf{will} be accepted."
+    instruction:        "We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \\textbf{will} be accepted."
     constant:           "Constant"
     symbol:             "Symbol"
     value:              "Value"
