Fixed case in table header for constants

--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -21,7 +21,7 @@
 
 \DeclareSIUnit{\gforce}{g}
 \DeclareSIUnit{\year}{y}
-\DeclareSIUnit{\au}{AU}
+\DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\odot}}
