--- a/modules/naboj/templates/i18n/english.yaml
+++ b/modules/naboj/templates/i18n/english.yaml
@@ -18,9 +18,9 @@ team:                   "Team"
 constants:
     title:              "Table of constants"
     instruction:        "We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \\textbf{will} be accepted."
-    constant:           "Constant"
-    symbol:             "Symbol"
-    value:              "Value"
+    constant:           "constant"
+    symbol:             "symbol"
+    value:              "value"
 instructions:
     title:              "Instructions" 
 envelope:
