--- a/modules/naboj/templates/i18n/russian.yaml
+++ b/modules/naboj/templates/i18n/russian.yaml
@@ -18,9 +18,9 @@ team:                   "Команда"
 constants:
     title:              "Таблица констант"
     instruction:        "В течение соревнования рекомендуем пользоваться константами с этой таблицы. Решение полученное при помощи более точных величин Вам тоже примут."
-    constant:           "Константа"
-    symbol:             "Символ"
-    value:              "Величина"
+    constant:           "константа"
+    symbol:             "символ"
+    value:              "величина"
 instructions:
     title:              "Инструкции" 
 envelope:
