--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -18,9 +18,9 @@ team:                   "Tím"
 constants:
     title:              "Tabuľka konštánt"
     instruction:        "Počas Náboja odporúčame používať hodnoty konštánt z~tejto tabuľky. Výsledok získaný s použitím presnejších hodnôt Vám určite \\textbf{bude} uznaný."
-    constant:           "Konštanta"
-    symbol:             "Značka"
-    value:              "Hodnota"
+    constant:           "konštanta"
+    symbol:             "značka"
+    value:              "hodnota"
 instructions:
     title:              "Pokyny"
 envelope:
