--- a/modules/naboj/templates/i18n/english.yaml
+++ b/modules/naboj/templates/i18n/english.yaml
@@ -14,7 +14,9 @@ competition:
         genitive:       "Physics Náboj"
     email:              "info-en@physics.naboj.org"
     website:            "https://physics.naboj.org/"
-team:                   "Team"
+tearoff:
+    team:               "Team"
+    bottom:             "The team has received all problems."
 constants:
     title:              "Table of constants"
     instruction:        "We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \\textbf{will} be accepted."
