Changed to kebab-case

--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -15,7 +15,7 @@
                         \vspace{0pt}%
                         \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
                         \setlength{\parskip}{6pt}
-                        (@ if problem.id != '_end' @)
+                        (@ if problem.id != '-end-' @)
                             \protectedInput{\activeDirectory/problem.tex}%
                         (@ else @)
                             (* i18n.get(team.language).tearoff.bottom *)
