Fixed barcodes, added bottom, upgraded Makefile, fix to Polish constants

--- a/modules/naboj/templates/i18n/polish.yaml
+++ b/modules/naboj/templates/i18n/polish.yaml
@@ -43,8 +43,8 @@ physics_constants:
     mass_proton:        "masa protonu"
     mass_sun:           "masa Słońca"
     parsec:             "parsek"
-    permeability:       "przenikalność elektryczna próżni"
-    permittivity:       "przenikalność magnetyczna próżni"
+    permeability:       "przenikalność magnetyczna próżni"
+    permittivity:       "przenikalność elektryczna próżni"
     planck:             "stała Plancka"
     pressure_standard:  "ciśnienie atmosferyczne"
     puerperium:         "połóg"
