--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -15,17 +15,13 @@
                         \vspace{0pt}%
                         \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
                         \setlength{\parskip}{6pt}
-                        (@ if problem.id != '-end-' @)
-                            \protectedInput{\activeDirectory/problem.tex}%
-                        (@ else @)
-                            (* i18n.get(team.language).tearoff.bottom *)
-                        (@ endif @)
+                        \protectedInput{\activeDirectory/problem.tex}%
                     \end{minipage}%
                     \begin{minipage}[t][88mm][t]{0.15\linewidth}
                         \vspace{0mm}%
                         \hspace{4mm}%
                         \rotatebox{90}{%
-                            \hspace{23mm}%
+                            \hspace{24mm}%
                             \textsf{%
                                 \fontsize{20}{0}\selectfont(* '%03d'|format(venue.number) *)%
                                 \fontsize{28}{0}\selectfont(* '%03d'|format(team.id) *)%
@@ -37,7 +33,7 @@
                         \rotatebox{90}{%
                             \hspace{6mm}%
                             \includegraphics[%
-                                width = 80mm, height = 14mm, page = (* team.number * volume.problems|length + problem.number *)]{%
+                                width = 80mm, height = 14mm, page = (* team.number * (volume.problems|length + 1) + problem.number *)]{%
                                 \rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/venues/(* venue.id *)/barcodes.pdf%
                             }%
                             \hspace{6mm}%
@@ -48,5 +44,44 @@
                 (@ if loop.last @)\newpage(@ else @)\vspace*{-1mm}(@ endif @)
             (@ endfor @)
         (@ endfor @)
+        (@ for team in team3 @)%
+            \setcounter{volume}{(* volume.number *)}%
+            \setcounter{problem}{0}%
+            \setcounter{team}{(* team.id *)}%
+
+            \begin{minipage}[t][96mm][t]{\textwidth}%
+                \begin{minipage}[t][88mm][t]{0.85\linewidth}%
+                    \centering
+                    \vspace*{37mm}
+                    \LARGE
+                    \textit{(* i18n.get(team.language).tearoff.bottom *)}
+                \end{minipage}%
+                \begin{minipage}[t][88mm][t]{0.15\linewidth}
+                    \vspace{0mm}%
+                    \hspace{4mm}%
+                    \rotatebox{90}{%
+                        \hspace{24mm}%
+                        \textsf{%
+                            \fontsize{20}{0}\selectfont(* '%03d'|format(venue.number) *)%
+                            \fontsize{28}{0}\selectfont(* '%03d'|format(team.id) *)%
+                            \fontsize{20}{0}\selectfont(* '%02d'|format(0) *)%
+                            \fontsize{20}{0}\selectfont(* '%01d'|format(checkdigit(venue.number, team.id, 0)) *)%
+                        }%
+                    }%
+                    \hspace{2pt}
+                    \rotatebox{90}{%
+                        \hspace{6mm}%
+                        \includegraphics[%
+                            width = 80mm, height = 14mm, page = (* (team.number + 1) * (volume.problems|length + 1) *)]{%
+                            \rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/venues/(* venue.id *)/barcodes.pdf%
+                        }%
+                        \hspace{6mm}%
+                    }%
+                \end{minipage}
+                {\small (* i18n.get(team.language).tearoff.team *) \textbf{(* team.id *)}: (* team.name *)}
+            \end{minipage}%
+            (@ if loop.last @)\newpage(@ else @)\vspace*{-1mm}(@ endif @)
+        (@ endfor @)
+
     (@ endfor @)
 (@ endblock @)
