Fixed the damn cyclic prerequisite

--- a/modules/naboj/templates/i18n/hungarian.yaml
+++ b/modules/naboj/templates/i18n/hungarian.yaml
@@ -30,17 +30,17 @@ envelope:
 
 physics_constants:
     au:                 "csillagászati egység (Föld--Nap távolság)"
-    avogadro:           "Avogadro állandó"
-    boltzmann:          "Boltzmann állandó"
-    #density_air:        ""
-    #density_helium:     ""
+    avogadro:           "Avogadro-állandó"
+    boltzmann:          "Boltzmann-állandó"
+    density_air:        "levegő sűrűsége"
+    density_helium:     "hélium sűrűsége"
     density_water:      "a víz sűrűsége"
     elementary_charge:  "elemi töltés"
     gforce:             "nehézségi gyorsulás a Földön"
     gravity:            "gravitációs állandó"
     mass_earth:         "a Föld tömege"
-    #mass_electron:      ""
-    #mass_proton:        ""
+    mass_electron:      "elektron tömege"
+    mass_proton:        "proton tömege"
     mass_sun:           "a Nap tömege"
     parsec:             "parszek"
     permeability:       "a vákuum mágneses permeabilitása"
@@ -52,8 +52,8 @@ physics_constants:
     radius_sun:         "a Nap sugara"
     solar_flux:         "napállandó (a Nap sugárzásának fluxus sűrűsége \\SI{1}{\\au} távolságban)"
     speed_light:        "fénysebesség vákuumban"
-    stefan_boltzmann:   "Stefan--Boltzmann állandó"
-    universal_gas:      "univerzális gáz állandó"
+    stefan_boltzmann:   "Stefan--Boltzmann-állandó"
+    universal_gas:      "univerzális gázállandó"
 
     # heat_water:       "a víz hőkapacitása"
     # ice_melting:      "a víz párolgási entalpiája"
