Fixed hungarian polyglossia problem

--- a/modules/naboj/templates/base-languages.tex
+++ b/modules/naboj/templates/base-languages.tex
@@ -5,5 +5,5 @@
 (@ block specific @)
     \input{core/i18n/(* language.id *)/override.tex}
     \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format-language.tex}
-    \setmainlanguage{(* language.id *)}
+    \setmainlanguage{(* language.polyglossia *)}
 (@ endblock @)
