Simplified i18n even more

--- a/modules/naboj/format/format-language.tex
+++ b/modules/naboj/format/format-language.tex
@@ -59,12 +59,12 @@
 
 \fancypagestyle{constants}{%
     \pagestyle{main}
-    \fancyhead[LE,RO]{\textit{(* i18n.section.constants *)}}
+    \fancyhead[LE,RO]{\textit{(* i18n.constants.title *)}}
 }
 
 \fancypagestyle{instructions}{%
     \pagestyle{main}
-    \fancyhead[LE,RO]{\textit{(* i18n.section.instructions *)}}
+    \fancyhead[LE,RO]{\textit{(* i18n.instructions.title *)}}
 }
 
 \fancypagestyle{first}{%
