Closer to PEP8 in core and naboj

--- a/modules/naboj/templates/answers-mod5.tex
+++ b/modules/naboj/templates/answers-mod5.tex
@@ -7,7 +7,7 @@
    
     \section{(* i18n.section.answers *)}
     \pagestyle{answers}
-    (@ for modulo in volume.problemsMod5 @)
+    (@ for modulo in volume.problems_mod_5 @)
         \newpage%
         \section{(* i18n.section.modulo *) (* loop.index0 *)}
         (@ for problem in modulo @)%
