--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -2,7 +2,7 @@
 
 (@ block content @)
     \pagestyle{tearoff}    
-    (@ for team3 in venue.teamsDiv3 @)
+    (@ for team3 in venue.teams_div_3 @)
         (@ for problem in volume.problems @)
             (@ for team in team3 @)%
                 \setcounter{volume}{(* volume.number *)}%
